kubernetes-dashboard/ingress-with-auth-using-kubeapps-oauth2p.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-auth2
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
#   nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/auth-url: "http://kubeapps.kubeapps.svc.cluster.local/apps/oauth2/auth?allowed_groups=cloud-services-and-security-management,application-developer"
    nginx.ingress.kubernetes.io/auth-signin: "https://chaimeleon-eu.i3m.upv.es/apps/oauth2/start"
    nginx.ingress.kubernetes.io/auth-response-headers: authorization
    nginx.ingress.kubernetes.io/proxy-buffer-size: '16k'
spec:
  tls:
    - hosts:
        - chaimeleon-eu.i3m.upv.es
  rules:
    - host: chaimeleon-eu.i3m.upv.es
      http:
        paths:
          - path: /apps/k8s-dashboard/?(.*)
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 8443
